# capstone-dao-notebox

./: Anchor.toml  Cargo.toml  readme.md
documentation/: NoteBox Capstone (LOI) Rohit Sekhri.pages  architecture.mmd
programs/dao_vote/: Cargo.toml
programs/dao_vote/src/: error.rs  lib.rs  state.rs
programs/dao_vote/src/instructions/: close_proposal.rs  create_proposal.rs  create_vote.rs  mod.rs
programs/notebox/: Cargo.toml
programs/notebox/src/: error.rs  lib.rs
programs/notebox/src/instructions/: create_post.rs  delete_post.rs  mod.rs  update_config.rs
programs/notebox/src/state/: config.rs  mod.rs  post.rs
tests/: capstone-dao-notebox.ts
