[package]
name = "dao_vote"
version = "0.1.0"
description = "Created with Anchor Manually"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dao_vote"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
notebox = { path = "../notebox", features = ["cpi"] }
